Finalizing Challenge and README

--- a/Resources/additional_queries.ipynb
+++ b/Resources/additional_queries.ipynb
@@ -70,35 +70,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['id', 'station', 'date', 'prcp', 'tobs']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "source": [
+    "Measurement.__table__.columns.keys()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['id', 'station', 'name', 'latitude', 'longitude', 'elevation']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "Station.__table__.columns.keys()"
+   ]
   },
   {
    "source": [
-    "## Summary Observation #3 Query"
+    "## Summary Query #1"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "June Precipitation    1574\ndtype: int64 \n\n        June Precipitation\ncount          927.000000\nmean             0.231532\nstd              0.411596\nmin              0.010000\n25%              0.030000\n50%              0.090000\n75%              0.240000\nmax              4.430000\n"
+     ]
+    }
+   ],
+   "source": [
+    "results_june = session.query(Measurement.prcp)\\\n",
+    "    .filter(extract('month',Measurement.date) == 6).all()\n",
+    "\n",
+    "df = pd.DataFrame(list(np.ravel(results_june)), columns = ['June Precipitation'])\n",
+    "df_rain = df[df[\"June Precipitation\"] > 0]\n",
+    "print(df.count(),'\\n\\n',df_rain.describe())"
+   ]
+  },
+  {
+   "source": [
+    "## Summary Query #2"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "December Precipitation    1405\ndtype: int64 \n\n        December Precipitation\ncount              895.000000\nmean                 0.340369\nstd                  0.646704\nmin                  0.010000\n25%                  0.030000\n50%                  0.100000\n75%                  0.330000\nmax                  6.420000\n"
+     ]
+    }
+   ],
+   "source": [
+    "results_dec = session.query(Measurement.prcp)\\\n",
+    "    .filter(extract('month',Measurement.date) == 12).all()\n",
+    "\n",
+    "df = pd.DataFrame(list(np.ravel(results_dec)), columns = ['December Precipitation'])\n",
+    "df_rain = df[df[\"December Precipitation\"] > 0]\n",
+    "print(df.count(),'\\n\\n',df_rain.describe())"
+   ]
+  },
+  {
+   "source": [
+    "## Summary Query #3"
    ],
    "cell_type": "markdown",
    "metadata": {}
